# geosim_project

./: CMakeLists.txt
src/: FlatSurface.cpp  FlatSurface.h  ISurface.h  Solver.cpp  Solver.h  Sphere.cpp  Sphere.h
src/TestExecutable/: main.cpp
